# AI-Playground

./: .gitignore  CLAUDE.md
projects/werewolf/: CLAUDE.md  README.md  config.example.yaml  pyproject.toml  run.py
projects/werewolf/examples/: ai_battle.py  simple_game.py
projects/werewolf/tests/: __init__.py  test_agents.py  test_game.py  test_llm.py  test_resolver.py  test_roles.py
projects/werewolf/web/: README.md
projects/werewolf/web/backend/: main.py  requirements.txt
projects/werewolf/web/backend/api/: __init__.py  benchmark.py  config.py  games.py  websocket.py
projects/werewolf/web/backend/models/: __init__.py  schemas.py
projects/werewolf/web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
projects/werewolf/web/frontend/src/: App.tsx  (+2 more)
projects/werewolf/werewolf/: __init__.py
projects/werewolf/werewolf/agents/: __init__.py  base.py  human_agent.py  llm_agent.py  random_agent.py
projects/werewolf/werewolf/config/: __init__.py  presets.py  settings.py
projects/werewolf/werewolf/core/: __init__.py  enums.py  events.py  game.py  player.py
projects/werewolf/werewolf/engine/: __init__.py  moderator.py  resolver.py  vote.py
projects/werewolf/werewolf/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py  tools.py
projects/werewolf/werewolf/prompts/: __init__.py  role_prompts.py  system.py  templates.py
projects/werewolf/werewolf/roles/: __init__.py  base.py  guard.py  hunter.py  seer.py  villager.py  werewolf.py  witch.py
projects/werewolf/werewolf/runner/: __init__.py  cli_runner.py  game_runner.py
(+19 files in other folders)
