[project]
name = "werewolf"
version = "0.2.0"
description = "AI Werewolf Game Engine - LLM-powered agents playing Werewolf/Mafia"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "anthropic>=0.18",
]
web = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
all = [
    "werewolf[llm,web,dev]",
]

[project.scripts]
werewolf = "run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
